--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
+    "chart.js": "^4.4.7",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.23.1",
